kubernetes/p1-mongodb/kubernetes-dashboard-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  labels:
    app: kubernetes-dashboard
spec:
  selector:
    app: kubernetes-dashboard
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30002 # it must be between 30000-32767. If I remove it, it'll assign a random port when running "minikube service <service name>"
  type: LoadBalancer # accept external requests
